--- a/css/grid.css
+++ b/css/grid.css
@@ -5,7 +5,7 @@
        body {margin: 0; padding: 0;}
 
         h1, h2, h3, h4, h5, p {
-            font-family: 'Merriweather', serif;
+            font-family: 'Bitter', serif;
             font-weight: normal;
         }
         .container {
@@ -54,25 +54,25 @@
             background-color: white;
             /*Flex*/
             display: flex;
-            justify-content: space-between;
+            justify-content: center;
             align-items: center;
             flex-direction: row;
             }
+
         .logo{
             width: 280px;
             height: auto;
-            margin: 50px 0 20px 30px;}
+            padding-top: 40px;}
 
          .links ul{
-             display: flex;
-             flex-direction: row;
-             justify-content: space-around;
-             padding: 70px 10px 0 0;
-             flex-wrap: wrap;
-             margin-right: 75px;
+            display: flex;
+            flex-direction: row;
+            justify-content: center;
+            padding: 70px 10px 0 0;
+            flex-wrap: wrap;
+            margin-right: 75px;
 
          }
-
          .links li.dropdown{
           padding-right: 8px;
          }
@@ -329,8 +329,8 @@
         }
         main p{
          font-size: 25px;
-         font-family: 'Merriweather', serif;;
-         font-weight: 300; 
+         font-family: 'Bitter', serif;
+         font-weight: 300;
          line-height: 30px;
          text-align:justify;  
          text-justify:distribute;
@@ -338,7 +338,7 @@
 
          main p.quienes{
          font-size: 18px;
-         font-family: 'Merriweather', serif;;
+         font-family: 'Bitter', serif;
          font-weight: 500; 
          line-height: 26px;
          text-align:justify; 
@@ -348,23 +348,26 @@
          main a {
           text-decoration: none;
           color: black;
-          font-family: 'Merriweather', serif;;
+          font-family: 'Bitter', serif;
           font-weight: 600;
          }
 
-        main h1{font-family: 'Merriweather', serif;;
+        main p {
+            font-size: 18px;
+        }
+        main h1{
+         font-family: 'Bitter', serif;
          font-size: 50px;
          text-align: center;
          color:#EF7521; }
 
         main h2{
-          font-family: 'Merriweather', serif;;
+         font-family: 'Bitter', serif;
           font-weight: 300;
-          line-height: 32px;
-          text-align:justify;  
+          line-height: 28px;
+          text-align:justify;
           text-justify:distribute;
-          font-size: 28px;
-          padding: 50px;
+          font-size: 20px;
         }
 
         #video{
