--- a/css/grid.css
+++ b/css/grid.css
@@ -363,7 +363,7 @@
             font-size: 18px;
         }
         main h1{
-         font-family: 'Bitter', serif;
+         font-family: 'Lato', sans-serif;
          font-size: 50px;
          text-align: center;
          color:#EF7521; }
