--- a/css/grid.css
+++ b/css/grid.css
@@ -15,7 +15,7 @@
                     "slider slider slider"
                     "nav content side"
                     "footer footer footer";
-            grid-template-columns: 10% 80% 10%;
+            grid-template-columns: 20% 60% 20%;
             grid-template-rows: auto 1fr auto;
             grid-gap: 10px;
             height: 100vh;
@@ -47,15 +47,16 @@
 
          /* header*/
         header {
-            grid-area: header;}
+            grid-area: header;
+        }
 
         .header{
-            background-color: white;
-            /*Flex*/
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            flex-direction: row;}
+         background-color: gray;
+         /*Flex*/
+         display: flex;
+         justify-content: center;
+         align-items: center;
+         flex-direction: row;}
 
         .logo{
             width: 380px;
@@ -63,12 +64,12 @@
             padding-top: 30px; }
 
          .links ul{
-            display: flex;
-            flex-direction: row;
-            justify-content: center;
-            padding: 70px 10px 0 0;
-            flex-wrap: wrap;
-            margin-right: 75px;
+         display: flex;
+         flex-direction: row;
+         justify-content: center;
+         padding: 70px 10px 0 0;
+         flex-wrap: wrap;
+         margin-right: 75px;
 
          }
          .links li.dropdown{
@@ -76,16 +77,16 @@
          }
           
          .links ul li a{
-         color: #000000;
+         color: #ffffff;
          text-decoration: none;
          margin-left: 25px;
-         font-family: 'Lato', sans-serif;
-         font-size: 15px;
-         font-weight: 600;
+         font-family: 'Libre Baskerville', serif;
+         font-size: 12px;
+         font-weight: 500;
          }
 
          .links ul li a:hover{
-         color:#EF7521;
+         color: #5e6c77;
          }
 
         /*Active dropdown nav item*/
@@ -129,7 +130,7 @@
             height: 2px;
             margin: 0 auto;
             width: 500px;
-            background-color: #EF7521;
+            background-color: #8c9aa5;
         }
         /* Arrow  */
         .caret {
@@ -363,18 +364,21 @@
             font-size: 18px;
         }
         main h1{
-         font-family: 'Lato', sans-serif;
+         font-family: 'Libre Baskerville', serif;
          font-size: 50px;
          text-align: center;
          color:#EF7521; }
 
         main h2{
-          font-family: 'Lato', sans-serif;
-          font-weight: 300;
+          font-family: 'Libre Baskerville', serif;
           line-height: 28px;
-          text-align:justify;
-          text-justify:distribute;
-          font-size: 20px;
+          text-align: left;
+          text-justify: distribute;
+          font-size: 17px;}
+
+        .col-2{
+            column-count: 2;
+            column-gap: 40px;
         }
 
         #video{
@@ -396,7 +400,7 @@
          font-size: 30px;
          color:#EF7521;
          padding: 0;
-            background-color: gray;
+         background-color: gray;
         }
         .servicios h3{
             font-size: 30px;
@@ -743,12 +747,12 @@
         
         /* Footer */
         footer {
-            grid-area: footer;
-            height: 250px;
-            display: flex;
-            justify-content: center;
-            flex-direction: row;
-            background-color:#E1E4E4;
+        grid-area: footer;
+        height: 250px;
+        display: flex;
+        justify-content: center;
+        flex-direction: row;
+        background-color: #8c9aa5;
         }
         footer .logo{
           flex-basis: 20%;
@@ -766,7 +770,7 @@
         }
         footer .col1 a{
           text-decoration: none;
-          color: black;
+          color: #ffffff;
         }
          footer .col2{
           flex-basis: 20%;
